fix: solve z-index issue with geography

--- a/packages/utilities/src/components/editor-html/editor-html.scss
+++ b/packages/utilities/src/components/editor-html/editor-html.scss
@@ -11,6 +11,7 @@
 	margin-top: 10px;
 	min-height: 200px;
 	background: white;
+	z-index: 0;
 }
 
 .public-DraftStyleDefault-block {
